--- a/index.html
+++ b/index.html
@@ -333,12 +333,12 @@
                                     <li class="li1" > 
                                             Help
                                         </li>
-                                        <li class="footerlis"  ><a href="#">
+                                        <li class="footerlis"  ><a href="contactus.html">
                                             Contact US
                                             </a>
                                         </li>
                                         <li class="footerlis"  >
-                                            <a href="#">
+                                            <a href="privacypoilcy.html">
                                             Privacy Policy
                                             </a>
                                         </li>
